# windir

./: CMakeLists.txt  CMakeSettings.json  README.md  cmake-build[WSL UBUNTU 20.04}.cpp  cmake-build[WSL UBUNTU 20.04}.h  oneapi-common-vars-for-installer_b_2021.1.588.msi
