# CMakeList.txt : projet CMake pour cmake-build[WSL UBUNTU 20.04}, incluez la source et définissez
# la logique spécifique au projet ici.
#
cmake_minimum_required (VERSION 3.8)

project ("cmake-build[WSL UBUNTU 20.04}")

# Ajoutez une source à l'exécutable de ce projet.
add_executable (CMakeTarget "cmake-build[WSL UBUNTU 20.04}.cpp" "cmake-build[WSL UBUNTU 20.04}.h")

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
